Fix Ace editor scrollbar over the header menu

--- a/default/css/import/_header.scss
+++ b/default/css/import/_header.scss
@@ -2,7 +2,7 @@ header{
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 5;
+  z-index: 10;
   display: flex;
   flex-grow: 1;
   flex-wrap: wrap;
